# ipfs-conf

./: Makefile  build_config.mk  configure.ac
include/ipfs/: client.h
include/ipfs/test/: utils.h
src/: Makefile.am  client.cc
src/http/: Makefile.am  transport-curl.cc
